// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractItem should render correctly 1`] = `
<StatusCard
  amount={21000}
  color="primary"
  creationDate={2021-01-01T00:00:00.000Z}
  currency="EUR"
  id="contractId"
  label="make payment"
  labelIcon={
    <Icon
      color="#FFFCFA"
      id="dollarSign"
      size={17}
    />
  }
  lastModified={2021-01-01T00:00:00.000Z}
  offerId="offerId"
  onPress={[Function]}
  price={21}
  subtext="01 / 01 / 21"
  title="PC‑NAN‑NAN"
  tradeStatus="paymentRequired"
  type="bid"
  unreadMessages={0}
/>
`;

exports[`ContractItem should render correctly with past contract 1`] = `
<StatusCard
  amount={21000}
  color="success"
  creationDate={2021-01-01T00:00:00.000Z}
  currency="EUR"
  icon={
    <Icon
      color="#65A519"
      id="buy"
      size={16}
    />
  }
  id="contractId"
  lastModified={2021-01-01T00:00:00.000Z}
  offerId="offerId"
  onPress={[Function]}
  price={21}
  subtext="01 / 01 / 21"
  title="PC‑NAN‑NAN"
  tradeStatus="tradeCompleted"
  type="bid"
  unreadMessages={0}
/>
`;

exports[`ContractItem should render correctly with unread messages 1`] = `
<StatusCard
  amount={21000}
  color="primary"
  creationDate={2021-01-01T00:00:00.000Z}
  currency="EUR"
  id="contractId"
  label="make payment"
  labelIcon={
    <Icon
      color="#FFFCFA"
      id="dollarSign"
      size={17}
    />
  }
  lastModified={2021-01-01T00:00:00.000Z}
  offerId="offerId"
  onPress={[Function]}
  price={21}
  subtext="01 / 01 / 21"
  title="PC‑NAN‑NAN"
  tradeStatus="paymentRequired"
  type="bid"
  unreadMessages={1}
/>
`;

exports[`OfferItem should render correctly 1`] = `
<StatusCard
  amount={
    [
      21000,
      210000,
    ]
  }
  color="primary-mild"
  creationDate={2021-01-01T00:00:00.000Z}
  id="id"
  label="looking for match"
  labelIcon={
    <Icon
      color="#7D675E"
      id="search"
      size={17}
    />
  }
  lastModified={2021-01-01T00:00:00.000Z}
  matches={[]}
  onPress={[Function]}
  subtext="01 / 01 / 21"
  title="P‑NAN"
  tradeStatus="searchingForPeer"
  type="bid"
/>
`;

exports[`OfferItem should render correctly if it's a past offer 1`] = `
<StatusCard
  amount={
    [
      21000,
      210000,
    ]
  }
  color="success"
  creationDate={2021-01-01T00:00:00.000Z}
  icon={
    <Icon
      color="#65A519"
      id="xCircle"
      size={16}
    />
  }
  id="id"
  lastModified={2021-01-01T00:00:00.000Z}
  matches={[]}
  onPress={[Function]}
  subtext="01 / 01 / 21"
  title="P‑NAN"
  tradeStatus="tradeCompleted"
  type="bid"
/>
`;
